# bean-library-api

./: .gitignore  Dockerfile  django.yml  docker-compose.yml  docker.env  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml
beanlibapi/: asgi.py  settings.py  urls.py  wsgi.py
beanlibapi/apps/authx/: admin.py  apps.py  forms.py  model_managers.py  models.py  serializers.py  urls.py  views.py  views_temp.py
beanlibapi/apps/authx/migrations/: 0001_initial.py  0002_alter_user_managers.py  0002_alter_user_managers_alter_user_email.py
beanlibapi/apps/authx/tests/: conftest.py  test_auth.py
beanlibapi/apps/authx/views/: __init__.py  base.py  google.py
beanlibapi/apps/core/: admin.py  apps.py  constants.py  model_managers.py  model_mixins.py  models.py  permissions.py  serializers.py  urls.py  views_temp.py
beanlibapi/config/: asgi.py  urls.py  wsgi.py
beanlibapi/config/settings/: base.py  docker.py  production.py  test.py
beanlibapi/core/: admin.py  apps.py  jwt_temp.py  model_managers.py  model_mixins.py  models.py  serializers.py  storages.py  urls.py  views.py  views_temp.py
beanlibapi/core/migrations/: 0001_initial.py  0002_user_phone_number.py
beanlibapi/core/tests/: conftest.py  test_auth.py  test_beans.py  test_users.py
beanlibapi/core/views/: __init__.py  attachment.py  auth.py  bean.py
beanlibapi/settings/: base.py  development.py  local.py  test.py
beanlibapi/templates/: base.html  email.html  index.html  login.html  signin.html  signup.html
beanlibapi/templates/account/: login.html
nginx/: nginx.conf
(+17 files in other folders)
